--- a/repository.yaml
+++ b/repository.yaml
@@ -2,5 +2,5 @@
 # https://developers.home-assistant.io/docs/add-ons/repository
 
 name: Crypto Inspect Add-ons
-url: "https://github.com/your-username/crypto-inspect"
-maintainer: "Your Name <your.email@example.com>"
+url: "https://github.com/Mesteriis/crypto-inspector"
+maintainer: "Mesteriis"
