feat: add comprehensive crypto analysis module
- Add technical analysis (SMA, EMA, RSI, MACD, Bollinger Bands, ATR)
- Add pattern detection (Golden/Death Cross, Double Top/Bottom, RSI extremes)
- Add composite scoring engine (0-100 scale with weighted components)
- Add BTC cycle detection (8 market phases, halving tracking)
- Add on-chain metrics (Fear & Greed Index, mempool stats)
- Add derivatives analysis (Funding Rate, Open Interest, L/S Ratio)
- Add REST API endpoints for analysis
- Add scheduled analysis jobs (every 4 hours)
- Update config.yaml with analysis options
- Exclude crypto_analyzer reference folder from ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ packages = ["src"]
 [tool.ruff]
 line-length = 100
 src = ["src"]
-exclude = ["alembic/versions/*"]
+exclude = ["alembic/versions/*", "crypto_analyzer/*"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
