--- a/config.yaml
+++ b/config.yaml
@@ -43,6 +43,12 @@ options:
     - "BTC/USDT"
     - "ETH/USDT"
   fetch_interval_minutes: 60
+  # Analysis options
+  analysis_enabled: true
+  analysis_interval_hours: 4
+  alert_on_strong_signals: true
+  alert_threshold_buy: 75
+  alert_threshold_sell: 25
 
 schema:
   api_port: port
@@ -56,6 +62,11 @@ schema:
   log_level: list(debug|info|warning|error)
   symbols: list(str)
   fetch_interval_minutes: int(1,1440)
+  analysis_enabled: bool?
+  analysis_interval_hours: int(1,24)?
+  alert_on_strong_signals: bool?
+  alert_threshold_buy: int(50,100)?
+  alert_threshold_sell: int(0,50)?
 
 # Map configuration directory - include secrets for API keys
 map:
