--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "httpx>=0.28.0",
     "apscheduler>=3.10.0",
+    "websockets>=12.0",
 ]
 
 [project.optional-dependencies]
