--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "httpx>=0.28.0",
     "apscheduler>=3.10.0",
     "websockets>=12.0",
+    "greenlet>=3.3.0",
 ]
 
 [project.optional-dependencies]
