--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,8 @@ jobs:
           pytest tests/ -v --tb=short \
             --cov=src \
             --cov-report=xml \
-            --cov-report=term-missing
+            --cov-report=term-missing \
+            --cov-fail-under=45
 
       - name: Upload coverage
         if: matrix.python-version == '3.13'
