--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -276,33 +276,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Get build info
-        id: build-info
+      - name: Get platform
+        id: platform
         run: |
-          if [ -f "build.yaml" ]; then
-            FROM=$(yq eval ".build_from.${{ matrix.arch }}" build.yaml)
-          elif [ -f "build.json" ]; then
-            FROM=$(jq -r ".build_from.${{ matrix.arch }}" build.json)
+          if [ "${{ matrix.arch }}" = "amd64" ]; then
+            echo "platform=linux/amd64" >> $GITHUB_OUTPUT
           else
-            # Default HA base images
-            if [ "${{ matrix.arch }}" = "amd64" ]; then
-              FROM="ghcr.io/home-assistant/amd64-base-python:3.13-alpine3.21"
-            else
-              FROM="ghcr.io/home-assistant/aarch64-base-python:3.13-alpine3.21"
-            fi
+            echo "platform=linux/arm64" >> $GITHUB_OUTPUT
           fi
-          echo "from=$FROM" >> "$GITHUB_OUTPUT"
-          echo "📦 Base image: $FROM"
 
-      - name: Test build with HA Builder
-        uses: home-assistant/builder@2025.11.0
-        continue-on-error: true
+      - name: Test build HA add-on
+        uses: docker/build-push-action@v6
         with:
-          args: |
-            --test \
-            --${{ matrix.arch }} \
-            --target . \
-            --docker-hub ghcr.io/${{ github.repository_owner }}
+          context: .
+          file: ./Dockerfile
+          platforms: ${{ steps.platform.outputs.platform }}
+          push: false
+          load: true
+          tags: test-build:${{ matrix.arch }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # ════════════════════════════════════════════════════════════════
   #                    AUTO-RELEASE ON VERSION CHANGE
@@ -404,21 +397,72 @@ jobs:
             ${{ steps.changelog.outputs.changelog }}
 
             ---
-            **Docker images** available at:
-            ```
-            ghcr.io/${{ github.repository }}/amd64:${{ needs.check-version.outputs.version }}
-            ghcr.io/${{ github.repository }}/aarch64:${{ needs.check-version.outputs.version }}
-            ```
+            **Docker images** will be available at:
+
+            Standalone: `ghcr.io/${{ github.repository }}:${{ needs.check-version.outputs.version }}`
+
+            HA Add-on:
+            - `ghcr.io/${{ github.repository }}/amd64:${{ needs.check-version.outputs.version }}`
+            - `ghcr.io/${{ github.repository }}/aarch64:${{ needs.check-version.outputs.version }}`
           draft: false
           prerelease: false
           generate_release_notes: true
 
   # ════════════════════════════════════════════════════════════════
-  #                    BUILD & PUSH DOCKER
+  #                    BUILD & PUSH STANDALONE DOCKER
   # ════════════════════════════════════════════════════════════════
 
-  release:
-    name: 🚀 Publish ${{ matrix.arch }}
+  release-standalone:
+    name: 🐳 Publish Standalone
+    runs-on: ubuntu-latest
+    needs: [create-release]
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}},value=${{ needs.create-release.outputs.version }}
+            type=raw,value=latest
+
+      - name: Build and push standalone image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile.standalone
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ════════════════════════════════════════════════════════════════
+  #                    BUILD & PUSH HA ADD-ON
+  # ════════════════════════════════════════════════════════════════
+
+  release-addon:
+    name: 🏠 Publish HA Add-on (${{ matrix.arch }})
     runs-on: ubuntu-latest
     needs: [create-release]
     permissions:
@@ -432,6 +476,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -439,19 +489,32 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and publish with HA Builder
-        uses: home-assistant/builder@2025.11.0
+      - name: Get platform
+        id: platform
+        run: |
+          if [ "${{ matrix.arch }}" = "amd64" ]; then
+            echo "platform=linux/amd64" >> $GITHUB_OUTPUT
+          else
+            echo "platform=linux/arm64" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Build and push HA add-on
+        uses: docker/build-push-action@v6
         with:
-          args: |
-            --${{ matrix.arch }} \
-            --target . \
-            --docker-hub ghcr.io/${{ github.repository_owner }} \
-            --addon
+          context: .
+          file: ./Dockerfile
+          platforms: ${{ steps.platform.outputs.platform }}
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.arch }}:${{ needs.create-release.outputs.version }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.arch }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   update-release:
     name: 📝 Update Release
     runs-on: ubuntu-latest
-    needs: [create-release, release]
+    needs: [create-release, release-standalone, release-addon]
     permissions:
       contents: write
     steps:
@@ -464,6 +527,14 @@ jobs:
 
             ---
             ### Docker Images Ready ✅
+
+            **Standalone (for local/Docker Compose):**
+            ```bash
+            docker pull ghcr.io/${{ github.repository }}:${{ needs.create-release.outputs.version }}
+            docker pull ghcr.io/${{ github.repository }}:latest
+            ```
+
+            **Home Assistant Add-on:**
             ```bash
             docker pull ghcr.io/${{ github.repository }}/amd64:${{ needs.create-release.outputs.version }}
             docker pull ghcr.io/${{ github.repository }}/aarch64:${{ needs.create-release.outputs.version }}
