--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,7 +224,7 @@ jobs:
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: "./Dockerfile"
-          ignore: DL3002,DL3006,DL3007,DL3008,DL3018
+          ignore: DL3002,DL3006,DL3007,DL3008,DL3018,SC2239
 
   shellcheck:
     name: 🐚 Shellcheck
