feat: add GitHub Pages with card gallery
- Add scripts/generate_docs.py for static HTML generation
- Add .github/workflows/docs.yml for Pages deployment
- Parse YAML dashboards and generate beautiful gallery
- Includes card previews, syntax highlighting, copy-to-clipboard

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ ignore = ["E741", "UP038"]
 
 [tool.ruff.lint.per-file-ignores]
 "src/services/analysis/explanations.py" = ["E501"]
+"scripts/generate_docs.py" = ["E501"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
