--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,12 @@
 name: Manual Release
 
 on:
-  # Only manual trigger - auto releases are in ci.yml
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag to build (e.g., v1.0.0)'
+        description: 'Version tag (e.g., v0.2.2)'
         required: true
         type: string
-  # Fallback for direct tag pushes
   push:
     tags:
       - 'v*.*.*'
@@ -49,16 +47,15 @@ jobs:
         run: pytest tests/ -v --tb=short
 
   # ============================================
-  # 2. Build and Push Multi-arch Docker Image
+  # 2. Build and Push Standalone Image
   # ============================================
-  build-and-push:
-    name: Build & Push
+  build-standalone:
+    name: Standalone Image
     runs-on: ubuntu-latest
     needs: test
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -68,8 +65,6 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             VERSION="${{ inputs.tag }}"
-          elif [ "${{ github.event_name }}" = "release" ]; then
-            VERSION="${{ github.event.release.tag_name }}"
           else
             VERSION="${GITHUB_REF#refs/tags/}"
           fi
@@ -83,89 +78,117 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      # Build amd64
-      - name: Build and push (amd64)
-        uses: docker/build-push-action@v5
+      - name: Build and push standalone
+        uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64
+          file: ./Dockerfile.standalone
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/amd64:${{ steps.version.outputs.version }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/amd64:latest
-          build-args: |
-            BUILD_FROM=ghcr.io/home-assistant/amd64-base-python:3.13-alpine3.21
-            BUILD_ARCH=amd64
-            BUILD_VERSION=${{ steps.version.outputs.version }}
-            BUILD_DATE=${{ github.event.repository.updated_at }}
-            BUILD_REF=${{ github.sha }}
-            BUILD_REPOSITORY=${{ github.repository }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      # Build aarch64
-      - name: Build and push (aarch64)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/arm64
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/aarch64:${{ steps.version.outputs.version }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/aarch64:latest
-          build-args: |
-            BUILD_FROM=ghcr.io/home-assistant/aarch64-base-python:3.13-alpine3.21
-            BUILD_ARCH=aarch64
-            BUILD_VERSION=${{ steps.version.outputs.version }}
-            BUILD_DATE=${{ github.event.repository.updated_at }}
-            BUILD_REF=${{ github.sha }}
-            BUILD_REPOSITORY=${{ github.repository }}
-          labels: ${{ steps.meta.outputs.labels }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.version }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   # ============================================
-  # 3. Update Release Notes
+  # 3. Build and Push HA Add-on Images
   # ============================================
-  release-notes:
-    name: Release Notes
+  build-addon:
+    name: HA Add-on (${{ matrix.arch }})
     runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.event_name == 'release'
+    needs: test
     permissions:
-      contents: write
+      contents: read
+      packages: write
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: ["amd64", "aarch64"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Update release with build info
-        uses: softprops/action-gh-release@v1
-        with:
-          append_body: true
-          body: |
+      - name: Get version
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ inputs.tag }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/}"
+          fi
+          VERSION="${VERSION#v}"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-            ---
-            ### Docker Images
-            ```
-            ghcr.io/${{ github.repository }}/amd64:${{ github.event.release.tag_name }}
-            ghcr.io/${{ github.repository }}/aarch64:${{ github.event.release.tag_name }}
-            ```
+      - name: Get platform and base image
+        id: platform
+        run: |
+          if [ "${{ matrix.arch }}" = "amd64" ]; then
+            echo "platform=linux/amd64" >> $GITHUB_OUTPUT
+            echo "base_image=ghcr.io/home-assistant/amd64-base-python:3.13-alpine3.21" >> $GITHUB_OUTPUT
+          else
+            echo "platform=linux/arm64" >> $GITHUB_OUTPUT
+            echo "base_image=ghcr.io/home-assistant/aarch64-base-python:3.13-alpine3.21" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push HA add-on
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: ${{ steps.platform.outputs.platform }}
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.arch }}:${{ steps.version.outputs.version }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.arch }}:latest
+          build-args: |
+            BUILD_FROM=${{ steps.platform.outputs.base_image }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ============================================
+  # 4. Summary
+  # ============================================
+  summary:
+    name: Release Summary
+    runs-on: ubuntu-latest
+    needs: [build-standalone, build-addon]
+    steps:
+      - name: Summary
+        run: |
+          VERSION="${{ inputs.tag || github.ref_name }}"
+          VERSION="${VERSION#v}"
+          echo "## Release $VERSION Complete!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Docker Images" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Standalone:**" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ghcr.io/${{ github.repository }}:$VERSION" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Home Assistant Add-on:**" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "ghcr.io/${{ github.repository }}/amd64:$VERSION" >> $GITHUB_STEP_SUMMARY
+          echo "ghcr.io/${{ github.repository }}/aarch64:$VERSION" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
