fix: s6-overlay v3 proper configuration
Key changes based on HA developer docs:
- Add init: false to config.yaml (required for s6-overlay v3)
- Change shebang to proper s6 format
- Use /etc/s6-overlay/s6-rc.d/ structure
- Add type file with longrun
- Add dependencies.d/base
- Register in user/contents.d/
- Set executable permissions via git

Version 0.2.8

--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,10 @@
 
 name: "Crypto Inspect"
 description: "Сбор и анализ данных криптовалютных свечей"
-version: "0.2.7"
+version: "0.2.8"
 slug: "crypto_inspect"
 url: "https://github.com/Mesteriis/crypto-inspector"
+init: false
 arch:
   - amd64
   - aarch64
