--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 name: "Crypto Inspect"
 description: "Сбор и анализ данных криптовалютных свечей"
-version: "0.2.10"
+version: "0.2.11"
 slug: "crypto_inspect"
 url: "https://github.com/Mesteriis/crypto-inspector"
 init: false
@@ -30,6 +30,7 @@ ports_description:
 
 # Минимальные настройки - всё работает из коробки
 options:
+  mcp_enabled: false
   symbols:
     # === Основные ===
     - "BTCUSDT"    # Bitcoin - цифровое золото
