feat: web UI for ingress + sensors API + MCP enabled by default
- MCP enabled by default (max functionality out of box)
- Web UI served via ingress with tabs:
  - Sensors: live status of all sensors
  - Dashboard: embedded GitHub Pages docs
  - API: endpoint documentation
- Added /sensors REST endpoint for HA integration
- Static files served from src/static/
- Version 0.2.14

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 name: "Crypto Inspect"
 description: "Сбор и анализ данных криптовалютных свечей"
-version: "0.2.13"
+version: "0.2.14"
 slug: "crypto_inspect"
 url: "https://github.com/Mesteriis/crypto-inspector"
 init: false
@@ -30,7 +30,7 @@ ports_description:
 
 # Минимальные настройки - всё работает из коробки
 options:
-  mcp_enabled: false
+  mcp_enabled: true
   symbols:
     # === Основные ===
     - "BTCUSDT"    # Bitcoin - цифровое золото
